--- a/j_3_dataTypeOperations.ipynb
+++ b/j_3_dataTypeOperations.ipynb
@@ -10,7 +10,7 @@
    "source": [
     "# 3. 데이터 타잎과 연산자\n",
     "\n",
-    "Last updated 20190402TUE0620 20180521MON1300\n",
+    "Last updated 20190404THR0620 20180521MON1300\n",
     "\n",
     "## 3.1 학습내용\n",
     "\n",
@@ -2710,128 +2710,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " class MyDate {\r\n",
-      "     static long totalMilliseconds = System.currentTimeMillis();\r\n",
-      "     static void printUTC() {\r\n",
-      "         long totalSeconds = totalMilliseconds / 1000;\r\n",
-      "         long nowSecond = totalSeconds % 60;\r\n",
-      "         long totalMinutes = totalSeconds / 60;\r\n",
-      "         long nowMinute = totalMinutes % 60;\r\n",
-      "         long totalHours = totalMinutes / 60;\r\n",
-      "         long nowHour = totalHours % 24;\r\n",
-      "         System.out.printf(\"Current time is %d:%d:%d GMT\", nowHour,nowMinute,n \r",
-      "owSecond);\r\n",
-      "     }\r\n",
-      "     static void printLocalTime() {\r\n",
-      "         System.out.println(\"현재시간: \" + new Date(totalMilliseconds));\r\n",
-      "     }\r\n",
-      "     public static void main(String[] args) {\r\n",
-      "         printUTC();\r\n",
-      "         printLocalTime();\r\n",
-      "     }\r\n",
-      " }\r\n",
-      "|  Replaced class MyDate\r\n",
-      "|    Update replaced variable d, reset to null\r\n",
-      "|    Update overwrote class MyDate\r\n",
-      "\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "class MyDate {\n",
-    "    static long totalMilliseconds = System.currentTimeMillis();\n",
-    "    static void printUTC() {\n",
-    "        long totalSeconds = totalMilliseconds / 1000;\n",
-    "        long nowSecond = totalSeconds % 60;\n",
-    "        long totalMinutes = totalSeconds / 60;\n",
-    "        long nowMinute = totalMinutes % 60;\n",
-    "        long totalHours = totalMinutes / 60;\n",
-    "        long nowHour = totalHours % 24;\n",
-    "        System.out.printf(\"Current time is %d:%d:%d GMT\", nowHour,nowMinute,nowSecond);\n",
+    "# %load src/DateTestMain.java\n",
+    "import java.util.Date;\n",
+    "public class DateTestMain {\n",
+    "    long totalMilliseconds = System.currentTimeMillis();\n",
+    "    void printUTC() {\n",
+    "\tlong nowYears = totalMilliseconds/(1000L*60*60*24*365);\n",
+    "\tlong nowDays = totalMilliseconds/(1000L*60*60*24)%365;\n",
+    "\tlong nowHours = totalMilliseconds/(1000L*60*60)%24;\n",
+    "\tlong nowMinutes = totalMilliseconds/(1000L*60)%60;\n",
+    "\tlong nowSeconds = totalMilliseconds/(1000L)%60;\n",
+    "        System.out.printf(\"Current time is Y%d %d %d:%d:%d GMT\\n\", nowYears,nowDays,nowHours,nowMinutes,nowSeconds);\n",
     "    }\n",
-    "    static void printLocalTime() {\n",
+    "    void printLocalTime() {\n",
     "        System.out.println(\"현재시간: \" + new Date(totalMilliseconds));\n",
     "    }\n",
-    "    public static void main(String[] args) {\n",
-    "        printUTC();\n",
-    "        printLocalTime();\n",
+    "    void printDue() {\n",
+    "\tSystem.out.println(\"Due: \"+new Date(Integer.MAX_VALUE*1000L));\n",
     "    }\n",
-    "}\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "printUTF(), printLocalTime()은 **static 함수**이므로 객체를 만들지 않고 사용할 수 있다.\n",
-    "또한 main()함수를 실행하여 결과를 출력할 수 있다."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " MyDate.printUTC();\r\n",
-      "Current time is 12:20:40 GMT\r\n",
-      " MyDate.printLocalTime();\r\n",
-      "현재시간: Sun Apr 01 21:20:40 KST 2018\r\n",
-      "\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "MyDate.printUTC();\n",
-    "MyDate.printLocalTime();"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " MyDate d=new MyDate();\r\n",
-      "|  Modified variable d of type MyDate with initial value MyDate@2a17b7b6\r\n",
-      "|    Update overwrote variable d\r\n",
-      "\r\n",
-      " d.printUTC();\r\n",
-      "Current time is 12:20:40 GMT\r\n",
-      " d.printLocalTime();\r\n",
-      "현재시간: Sun Apr 01 21:20:40 KST 2018\r\n",
-      "\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "MyDate d=new MyDate();\n",
-    "d.printUTC();\n",
-    "d.printLocalTime();"
+    "    public static void main(String[] args) {\n",
+    "\tDateTestMain d=new DateTestMain();\n",
+    "        d.printUTC();\n",
+    "        d.printLocalTime();\n",
+    "\td.printDue();\n",
+    "    }\n",
+    "}\n",
+    "\n"
    ]
   },
   {
@@ -2999,14 +2909,21 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Java 9",
-   "language": "java",
-   "name": "java"
+   "display_name": "Python 2",
+   "language": "python",
+   "name": "python2"
   },
   "language_info": {
-   "file_extension": ".class",
-   "mimetype": "application/java-vm",
-   "name": "java"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 2
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython2",
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
