--- a/j_3_dataTypeOperations.ipynb
+++ b/j_3_dataTypeOperations.ipynb
@@ -2535,7 +2535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -2546,12 +2546,12 @@
      "output_type": "stream",
      "text": [
       " long totalMilliseconds = System.currentTimeMillis();\r\n",
-      "|  Added variable totalMilliseconds of type long with initial value 1554172041415\r\n",
+      "|  Added variable totalMilliseconds of type long with initial value 1554353998158\r\n",
       "\r\n",
       " \r\n",
       "\r\n",
       " System.out.println(\"현재시간: \" + new Date(totalMilliseconds));\r\n",
-      "현재시간: Tue Apr 02 11:27:21 KST 2019\r\n",
+      "현재시간: Thu Apr 04 13:59:58 KST 2019\r\n",
       "\r\n"
      ]
     }
@@ -2564,7 +2564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -2577,7 +2577,7 @@
       " import java.text.DateFormat;\r\n",
       "\r\n",
       " DateFormat.getInstance().format(totalMilliseconds);\r\n",
-      "|  Expression value is: \"4/2/19, 11:27 AM\"\r\n",
+      "|  Expression value is: \"4/4/19, 1:59 PM\"\r\n",
       "|    assigned to temporary variable $4 of type String\r\n",
       "\r\n"
      ]
@@ -2603,52 +2603,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": false,
-    "slideshow": {
-     "slide_type": "-"
-    }
+    "collapsed": false
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " long totalSeconds = totalMilliseconds / 1000;\r\n",
-      "|  Added variable totalSeconds of type long with initial value 1521970734\r\n",
-      "\r\n",
-      " long nowSecond = totalSeconds % 60;\r\n",
-      "|  Added variable nowSecond of type long with initial value 54\r\n",
-      "\r\n",
-      " long totalMinutes = totalSeconds / 60;\r\n",
-      "|  Added variable totalMinutes of type long with initial value 25366178\r\n",
-      "\r\n",
-      " long nowMinute = totalMinutes % 60;\r\n",
-      "|  Added variable nowMinute of type long with initial value 38\r\n",
-      "\r\n",
-      " long totalHours = totalMinutes / 60;\r\n",
-      "|  Added variable totalHours of type long with initial value 422769\r\n",
-      "\r\n",
-      " long nowHour = totalHours % 24;\r\n",
-      "|  Added variable nowHour of type long with initial value 9\r\n",
-      "\r\n",
-      " System.out.printf(\"Current time is %d:%d:%d GMT\", nowHour,nowMinute,nowSecond \r",
-      ");\r\n",
-      "Current time is 9:38:54 GMT|  Expression value is: java.io.PrintStream@1d16f93d\r\n",
-      "|    assigned to temporary variable $9 of type PrintStream\r\n",
+      " totalMilliseconds/(1000L*60*60*24*365);\r\n",
+      "|  Expression value is: 49\r\n",
+      "|    assigned to temporary variable $5 of type long\r\n",
       "\r\n"
      ]
     }
    ],
    "source": [
-    "long totalSeconds = totalMilliseconds / 1000;\n",
-    "long nowSecond = totalSeconds % 60;\n",
-    "long totalMinutes = totalSeconds / 60;\n",
-    "long nowMinute = totalMinutes % 60;\n",
-    "long totalHours = totalMinutes / 60;\n",
-    "long nowHour = totalHours % 24;\n",
-    "System.out.printf(\"Current time is %d:%d:%d GMT\", nowHour,nowMinute,nowSecond);"
+    "totalMilliseconds/(1000L*60*60*24*365);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " totalMilliseconds/(1000L*60*60*24)%365;\r\n",
+      "|  Expression value is: 105\r\n",
+      "|    assigned to temporary variable $6 of type long\r\n",
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "totalMilliseconds/(1000L*60*60*24)%365;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " totalMilliseconds/(1000L*60*60)%24;\r\n",
+      "|  Expression value is: 4\r\n",
+      "|    assigned to temporary variable $7 of type long\r\n",
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "totalMilliseconds/(1000L*60*60)%24;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " totalMilliseconds/(1000L*60)%60;\r\n",
+      "|  Expression value is: 59\r\n",
+      "|    assigned to temporary variable $8 of type long\r\n",
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "totalMilliseconds/(1000L*60)%60;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " totalMilliseconds/(1000L)%60;\r\n",
+      "|  Expression value is: 58\r\n",
+      "|    assigned to temporary variable $9 of type long\r\n",
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "totalMilliseconds/(1000L)%60;"
    ]
   },
   {
@@ -2909,21 +2969,9 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 2",
-   "language": "python",
-   "name": "python2"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 2
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "display_name": "Java 9",
+   "language": "java",
+   "name": "java"
   }
  },
  "nbformat": 4,
