--- a/j_4_methods.ipynb
+++ b/j_4_methods.ipynb
@@ -433,15 +433,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
    },
-   "outputs": [],
    "source": [
-    "* 왜 변수를 함수의 argument로 넣을까?\n",
-    "* 함수에 변수를 넘기지 않으면 함수에 변수를 '하드 코딩' hard coding 한다. 여러 경우에 사용할 수 없게 된다."
+    "왜 변수를 함수의 argument로 넣을까?\n",
+    "함수에 변수를 넘기지 않으면, 변수를 함수 내에 써야 하는데, 이를 **'하드 코딩' hard coding**이라고 한다.\n",
+    "이런 경우 함수의 **재사용성**이 매우 제한된다."
    ]
   },
   {
@@ -796,9 +798,8 @@
     }
    },
    "source": [
-    "* 함수를 호출한다.\n",
-    "    * 함수 인자 3과 4는 int이다. float로 형변환이 (자동으로) 일어나고 있다.\n",
-    "    * 결과는 int가 아닌 float 4.0로 출력된다."
+    "함수를 호출하면. 결과는 int가 아닌 float 4.0로 출력된다.\n",
+    "함수 인자 3과 4는 int이다. 그러나 함수 인자의 형인 float로 자동 변환이 일어나고 있다."
    ]
   },
   {
@@ -1049,15 +1050,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true,
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
    "source": [
     "참고로 문자열에 대해서도 compareTo()를 사용할 수 있다.\n",
     "* 문자열이 같으면 0\n",
