--- a/j_3_dataTypeOperations.ipynb
+++ b/j_3_dataTypeOperations.ipynb
@@ -2546,12 +2546,12 @@
      "output_type": "stream",
      "text": [
       " long totalMilliseconds = System.currentTimeMillis();\r\n",
-      "|  Added variable totalMilliseconds of type long with initial value 1554353998158\r\n",
+      "|  Added variable totalMilliseconds of type long with initial value 1555290080296\r\n",
       "\r\n",
       " \r\n",
       "\r\n",
       " System.out.println(\"현재시간: \" + new Date(totalMilliseconds));\r\n",
-      "현재시간: Thu Apr 04 13:59:58 KST 2019\r\n",
+      "현재시간: Mon Apr 15 10:01:20 KST 2019\r\n",
       "\r\n"
      ]
     }
@@ -2577,7 +2577,7 @@
       " import java.text.DateFormat;\r\n",
       "\r\n",
       " DateFormat.getInstance().format(totalMilliseconds);\r\n",
-      "|  Expression value is: \"4/4/19, 1:59 PM\"\r\n",
+      "|  Expression value is: \"4/15/19, 10:01 AM\"\r\n",
       "|    assigned to temporary variable $4 of type String\r\n",
       "\r\n"
      ]
@@ -2603,9 +2603,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -2614,7 +2615,7 @@
      "text": [
       " totalMilliseconds/(1000L*60*60*24*365);\r\n",
       "|  Expression value is: 49\r\n",
-      "|    assigned to temporary variable $5 of type long\r\n",
+      "|    assigned to temporary variable $8 of type long\r\n",
       "\r\n"
      ]
     }
@@ -2822,7 +2823,8 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -2971,6 +2973,11 @@
   "kernelspec": {
    "display_name": "Java 9",
    "language": "java",
+   "name": "java"
+  },
+  "language_info": {
+   "file_extension": ".class",
+   "mimetype": "application/java-vm",
    "name": "java"
   }
  },
