--- a/j_4_methods.ipynb
+++ b/j_4_methods.ipynb
@@ -10,7 +10,7 @@
    "source": [
     "# 4. Methods\n",
     "\n",
-    "Last updated 20180409MON1222 20180318SUN0708\n",
+    "Last updated 20190416TUE1200 20180409MON1222 20180318SUN0708\n",
     "\n",
     "## 4.1 학습내용\n",
     "\n",
