--- a/j_5_controlstructure.ipynb
+++ b/j_5_controlstructure.ipynb
@@ -2628,9 +2628,9 @@
    ],
    "source": [
     "if (8%3!=0) {\n",
-    "    System.out.println(\"there is no remainder!\");\n",
+    "    System.out.println(\"there is remainder!\");\n",
     "} else {\n",
-    "    System.out.println(\"there is a remainder!\");\n",
+    "    System.out.println(\"there is no remainder!\");\n",
     "}"
    ]
   },
@@ -4577,8 +4577,9 @@
     }
    },
    "source": [
-    "* String은 immutable이라서, h객체의 값을 변경(추가)해도 객체를 새로 만들어 값을 넣는다.\n",
-    "* hash code가 다른 것을 볼 수 있다. \"Hello\"와 \"Hello world\"의 hash code가 다르다."
+    "String은 일단 값이 정해지면 수정될 수 없는 immutable 특징을 보인다.\n",
+    "다음과 같이 값을 변경(추가)해도 새로 String을 생성하여 값을 넣는다.\n",
+    "따라서 수정 전후의 hash code가 서로 다르게 된다. 즉, \"Hello\"와 \"Hello world\"의 hash code가 다르다."
    ]
   },
   {
@@ -4630,7 +4631,7 @@
     }
    },
    "source": [
-    "* StringBuilder는 새로운 객체를 만들지 않고, \"Hello\"에 \" world\"를 추가할 수 있다."
+    "반면에 StringBuilder는 새로운 객체를 만들지 않고, \"Hello\"에 \" world\"를 추가할 수 있다."
    ]
   },
   {
@@ -4677,10 +4678,10 @@
     }
    },
    "source": [
-    "### 변수의 사용\n",
-    "\n",
-    "* 프로그램의 재사용을 향상.\n",
-    "* 반복문으로 문제를를 풀려면 증감자를 이해해야 한다."
+    "프로그램을 하면서, 변수를 사용하면 프로그램을 수정할 필요가 적어지게 된다.\n",
+    "우리가 그리려는 ```*```을 변수로 사용하면, 나중에 심볼을 ```#```으로 변경한다 하더라도 해당 변수만 수정하면 된다.\n",
+    "우리가 그리려는 삼각형은 높이, 너비 2축으로 변경하므로 중첩반복문을 사용해야 한다.\n",
+    "중첩반복문에서의 증감자를 2축으로 사용해야 풀 수 있는 문제이다."
    ]
   },
   {
@@ -5172,9 +5173,11 @@
     }
    },
    "source": [
-    "* 연속값을 정의할 때 주의한다. 24.99~25사이의 값을 처리할 수 있는 if조건이 없다.\n",
-    "* 주의: operator\n",
-    "    * 부등호와 등호가 같이 쓰이는 경우, 부등호를 먼저 쓴다.\n",
+    "연속값을 정의할 때 주의한다.\n",
+    "비만도 계산 규정에 따라 소숫점 2자리까지 허용된다 하더라도 if문의 구간을 정할 때 주의한다.\n",
+    "예를 들어, 24.99까지의 구간과 25 이상의 구간을 나누었다고 하면 24.999와 같은 경우는 처리하지 못하게 되는 오류가 될 수 있다.\n",
+    "\n",
+    "* 주의: 부등호와 등호가 같이 쓰이는 경우, 부등호를 먼저 쓴다.\n",
     "```java\n",
     "=> (x) >= (o)\n",
     "=< (x) <= (o)\n",
@@ -5433,22 +5436,10 @@
     }
    },
    "source": [
-    "## 제어-9: 1~100 더하기\n",
+    "## 제어-9: 1~100 합계 계산하기\n",
     "\n",
-    "* recursive\n",
-    "* n(n+1)/2"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true,
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "* 왜 n+1"
+    "합계를 계산하는 문제로 1부터 100까지 반복문으로 활용해 프로그램 해보자.\n",
+    "이 문제는 재귀 recursive 방식 또는 더 간단하게 계산식 ```n(n+1)/2```으로 풀 수 있다."
    ]
   },
   {
@@ -5488,12 +5479,12 @@
     }
    },
    "source": [
-    "* 왜 101까지"
+    "0부터 100까지 반복하면서 합계 sum에 수를 더해 나간다."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -5503,12 +5494,9 @@
      "output_type": "stream",
      "text": [
       " int sum=0;\r\n",
-      "|  Modified variable sum of type int with initial value 0\r\n",
-      "|    Update overwrote variable sum\r\n",
+      "|  Added variable sum of type int with initial value 0\r\n",
       "\r\n",
-      " \r\n",
-      "\r\n",
-      " for(int i=0;i<101;i++)\r\n",
+      " for(int i=0;i<=100;i++)\r\n",
       "     sum+=i;\r\n",
       "\r\n",
       " System.out.print(sum);\r\n",
@@ -5518,8 +5506,7 @@
    ],
    "source": [
     "int sum=0;\n",
-    "\n",
-    "for(int i=0;i<101;i++)\n",
+    "for(int i=0;i<=100;i++)\n",
     "    sum+=i;\n",
     "System.out.print(sum);"
    ]
@@ -5537,11 +5524,9 @@
     "### 문제\n",
     "\n",
     "수학, 컴퓨터 문제를 제공하는 사이트 참조 https://projecteuler.net/archives 1번 문제이다.\n",
-    "2018년 4월 현재 70만 넘는 사람이 풀었다.\n",
+    "2019년 4월 현재 84만 넘는 사람이 풀었다.\n",
     "1000이하의 수 가운데 3, 5배수의 합계를 구한다.\n",
-    "* If we list all the natural numbers below 10 that are multiples of 3 or 5,\n",
-    "we get 3, 5, 6 and 9. The sum of these multiples is 23.\n",
-    "* Find the sum of all the multiples of 3 or 5 below 1000.\n",
+    "예를 들어 10이하의 수 가운데 3과 5의 배수는 3, 5, 6, 9이고, 합계를 계산하면 23이다.\n",
     "\n",
     "### 해결\n",
     "\n",
@@ -5568,47 +5553,11 @@
     "        * 출력 3,5 배수의 합계\n",
     "    * 작업절차\n",
     "        * 하나씩 숫자를 가져오기\n",
-    "        * 그 숫자가 배수인지 아닌지 판별하기\n",
+    "        * 그 숫자가 배수인지 판별하기\n",
     "        * 배수이면 합계를 구하기\n",
-    "        * 합계가 끝나면, 출력하기기"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
+    "        * 합계가 끝나면, 출력하기기\n",
     "위 작업절차는 1000번 반복이 되어야 한다.\n",
-    "**우선 작업을 1회만 완성**한 후, **그 다음에 반복을 넣어서 생각**하는 것이 쉽다.\n",
-    "1회만 완성해보자\n",
-    "* 숫자 1개를 가져오기\n",
-    "\n",
-    "```python\n",
-    ":get a number;\n",
-    "```\n",
-    "\n",
-    "* 그 숫자가 배수인지 판별하기\n",
-    "\n",
-    "```python\n",
-    "the number is divided by 3 or 5\n",
-    "```\n",
-    "\n",
-    "* 배수이면 합계를 구하기 - 여기서 합계는 처음에 아무런 값도 가지지 않도록 0으로 초기화한다.\n",
-    "\n",
-    "```python\n",
-    "if (num is not divided by 3 or 5) then (true)\n",
-    ":add num to sum;\n",
-    "endif\n",
-    "```\n",
-    "\n",
-    "* 합계가 끝나면, 출력하기\n",
-    "\n",
-    "```python\n",
-    "print sum\n",
-    "```\n"
+    "**우선 작업을 1회만 완성**한 후, **그 다음에 반복을 넣어서 생각**하는 것이 쉽다."
    ]
   },
   {
@@ -5643,7 +5592,7 @@
     "\n",
     ":sum=0;\n",
     "repeat\n",
-    "    if (num is not divided by 3 or 5) then (true)\n",
+    "    if (num is divided by 3 or 5) then (true)\n",
     "    :add num to sum;\n",
     "    endif\n",
     "repeat while (0 < num < 1000)\n",
@@ -6398,21 +6347,121 @@
       "|    Update overwrote variable n\r\n",
       "\r\n",
       " for(int i=0;i<100;i++) {\r\n",
-      "     //System.out.printf(\"year %d\\n\",i);\r\n",
+      "     System.out.printf(\"\\nyear %4d: \",i+1901);\r\n",
       "     if(((1901+i)%4==0 && (1901+i)%100!=0) || (1901+i)%400 ==0) {\r\n",
       "         D[1]=29;\r\n",
       "     } else {\r\n",
       "         D[1]=28;\r\n",
       "     }\r\n",
       "     for(int t:D) {\r\n",
-      "         if((d-1)%7==0 && i>=1) {\r\n",
-      "             //System.out.printf(\"\\tMonth:%d d:%d\\n\", t,d);\r\n",
+      "         if((d+1)%7==0 && i>=0) {\r\n",
+      "             System.out.printf(\" (%2d) Month:%3d d:%6d\", n,t,d);\r\n",
       "             n+=1;\r\n",
       "         }\r\n",
       "         d+=t;\r\n",
       "     }\r\n",
       " }\r\n",
       "\r\n",
+      "year 1901:  ( 0) Month: 30 d:    90 ( 1) Month: 31 d:   181\r\n",
+      "year 1902:  ( 2) Month: 30 d:   608 ( 3) Month: 31 d:   699\r\n",
+      "year 1903:  ( 4) Month: 30 d:   881\r\n",
+      "year 1904:  ( 5) Month: 29 d:  1126 ( 6) Month: 31 d:  1308\r\n",
+      "year 1905:  ( 7) Month: 31 d:  1581\r\n",
+      "year 1906:  ( 8) Month: 31 d:  1826 ( 9) Month: 31 d:  2099\r\n",
+      "year 1907:  (10) Month: 30 d:  2281 (11) Month: 31 d:  2372\r\n",
+      "year 1908:  (12) Month: 30 d:  2708\r\n",
+      "year 1909:  (13) Month: 28 d:  2953 (14) Month: 31 d:  2981 (15) Month: 30 d:  3226\r\n",
+      "year 1910:  (16) Month: 31 d:  3499\r\n",
+      "year 1911:  (17) Month: 31 d:  3772\r\n",
+      "year 1912:  (18) Month: 31 d:  4017 (19) Month: 30 d:  4108 (20) Month: 31 d:  4199\r\n",
+      "year 1913:  (21) Month: 30 d:  4626 (22) Month: 31 d:  4717\r\n",
+      "year 1914:  (23) Month: 30 d:  4899\r\n",
+      "year 1915:  (24) Month: 28 d:  5144 (25) Month: 31 d:  5172 (26) Month: 30 d:  5417\r\n",
+      "year 1916:  (27) Month: 31 d:  5599\r\n",
+      "year 1917:  (28) Month: 31 d:  5844 (29) Month: 31 d:  6117\r\n",
+      "year 1918:  (30) Month: 30 d:  6299 (31) Month: 31 d:  6390\r\n",
+      "year 1919:  (32) Month: 30 d:  6817 (33) Month: 31 d:  6908\r\n",
+      "year 1920:  (34) Month: 31 d:  6999 (35) Month: 30 d:  7244\r\n",
+      "year 1921:  (36) Month: 31 d:  7517\r\n",
+      "year 1922:  (37) Month: 31 d:  7790\r\n",
+      "year 1923:  (38) Month: 31 d:  8035 (39) Month: 31 d:  8308\r\n",
+      "year 1924:  (40) Month: 30 d:  8644 (41) Month: 31 d:  8735\r\n",
+      "year 1925:  (42) Month: 30 d:  8917\r\n",
+      "year 1926:  (43) Month: 28 d:  9162 (44) Month: 31 d:  9190 (45) Month: 30 d:  9435\r\n",
+      "year 1927:  (46) Month: 31 d:  9708\r\n",
+      "year 1928:  (47) Month: 31 d: 10135\r\n",
+      "year 1929:  (48) Month: 30 d: 10317 (49) Month: 31 d: 10408\r\n",
+      "year 1930:  (50) Month: 30 d: 10835 (51) Month: 31 d: 10926\r\n",
+      "year 1931:  (52) Month: 30 d: 11108\r\n",
+      "year 1932:  (53) Month: 29 d: 11353 (54) Month: 31 d: 11535\r\n",
+      "year 1933:  (55) Month: 31 d: 11808\r\n",
+      "year 1934:  (56) Month: 31 d: 12053 (57) Month: 31 d: 12326\r\n",
+      "year 1935:  (58) Month: 30 d: 12508 (59) Month: 31 d: 12599\r\n",
+      "year 1936:  (60) Month: 30 d: 12935\r\n",
+      "year 1937:  (61) Month: 28 d: 13180 (62) Month: 31 d: 13208 (63) Month: 30 d: 13453\r\n",
+      "year 1938:  (64) Month: 31 d: 13726\r\n",
+      "year 1939:  (65) Month: 31 d: 13999\r\n",
+      "year 1940:  (66) Month: 31 d: 14244 (67) Month: 30 d: 14335 (68) Month: 31 d: 14426\r\n",
+      "year 1941:  (69) Month: 30 d: 14853 (70) Month: 31 d: 14944\r\n",
+      "year 1942:  (71) Month: 30 d: 15126\r\n",
+      "year 1943:  (72) Month: 28 d: 15371 (73) Month: 31 d: 15399 (74) Month: 30 d: 15644\r\n",
+      "year 1944:  (75) Month: 31 d: 15826\r\n",
+      "year 1945:  (76) Month: 31 d: 16071 (77) Month: 31 d: 16344\r\n",
+      "year 1946:  (78) Month: 30 d: 16526 (79) Month: 31 d: 16617\r\n",
+      "year 1947:  (80) Month: 30 d: 17044 (81) Month: 31 d: 17135\r\n",
+      "year 1948:  (82) Month: 31 d: 17226 (83) Month: 30 d: 17471\r\n",
+      "year 1949:  (84) Month: 31 d: 17744\r\n",
+      "year 1950:  (85) Month: 31 d: 18017\r\n",
+      "year 1951:  (86) Month: 31 d: 18262 (87) Month: 31 d: 18535\r\n",
+      "year 1952:  (88) Month: 30 d: 18871 (89) Month: 31 d: 18962\r\n",
+      "year 1953:  (90) Month: 30 d: 19144\r\n",
+      "year 1954:  (91) Month: 28 d: 19389 (92) Month: 31 d: 19417 (93) Month: 30 d: 19662\r\n",
+      "year 1955:  (94) Month: 31 d: 19935\r\n",
+      "year 1956:  (95) Month: 31 d: 20362\r\n",
+      "year 1957:  (96) Month: 30 d: 20544 (97) Month: 31 d: 20635\r\n",
+      "year 1958:  (98) Month: 30 d: 21062 (99) Month: 31 d: 21153\r\n",
+      "year 1959:  (100) Month: 30 d: 21335\r\n",
+      "year 1960:  (101) Month: 29 d: 21580 (102) Month: 31 d: 21762\r\n",
+      "year 1961:  (103) Month: 31 d: 22035\r\n",
+      "year 1962:  (104) Month: 31 d: 22280 (105) Month: 31 d: 22553\r\n",
+      "year 1963:  (106) Month: 30 d: 22735 (107) Month: 31 d: 22826\r\n",
+      "year 1964:  (108) Month: 30 d: 23162\r\n",
+      "year 1965:  (109) Month: 28 d: 23407 (110) Month: 31 d: 23435 (111) Month: 30 d: 23680\r\n",
+      "year 1966:  (112) Month: 31 d: 23953\r\n",
+      "year 1967:  (113) Month: 31 d: 24226\r\n",
+      "year 1968:  (114) Month: 31 d: 24471 (115) Month: 30 d: 24562 (116) Month: 31 d: 24653\r\n",
+      "year 1969:  (117) Month: 30 d: 25080 (118) Month: 31 d: 25171\r\n",
+      "year 1970:  (119) Month: 30 d: 25353\r\n",
+      "year 1971:  (120) Month: 28 d: 25598 (121) Month: 31 d: 25626 (122) Month: 30 d: 25871\r\n",
+      "year 1972:  (123) Month: 31 d: 26053\r\n",
+      "year 1973:  (124) Month: 31 d: 26298 (125) Month: 31 d: 26571\r\n",
+      "year 1974:  (126) Month: 30 d: 26753 (127) Month: 31 d: 26844\r\n",
+      "year 1975:  (128) Month: 30 d: 27271 (129) Month: 31 d: 27362\r\n",
+      "year 1976:  (130) Month: 31 d: 27453 (131) Month: 30 d: 27698\r\n",
+      "year 1977:  (132) Month: 31 d: 27971\r\n",
+      "year 1978:  (133) Month: 31 d: 28244\r\n",
+      "year 1979:  (134) Month: 31 d: 28489 (135) Month: 31 d: 28762\r\n",
+      "year 1980:  (136) Month: 30 d: 29098 (137) Month: 31 d: 29189\r\n",
+      "year 1981:  (138) Month: 30 d: 29371\r\n",
+      "year 1982:  (139) Month: 28 d: 29616 (140) Month: 31 d: 29644 (141) Month: 30 d: 29889\r\n",
+      "year 1983:  (142) Month: 31 d: 30162\r\n",
+      "year 1984:  (143) Month: 31 d: 30589\r\n",
+      "year 1985:  (144) Month: 30 d: 30771 (145) Month: 31 d: 30862\r\n",
+      "year 1986:  (146) Month: 30 d: 31289 (147) Month: 31 d: 31380\r\n",
+      "year 1987:  (148) Month: 30 d: 31562\r\n",
+      "year 1988:  (149) Month: 29 d: 31807 (150) Month: 31 d: 31989\r\n",
+      "year 1989:  (151) Month: 31 d: 32262\r\n",
+      "year 1990:  (152) Month: 31 d: 32507 (153) Month: 31 d: 32780\r\n",
+      "year 1991:  (154) Month: 30 d: 32962 (155) Month: 31 d: 33053\r\n",
+      "year 1992:  (156) Month: 30 d: 33389\r\n",
+      "year 1993:  (157) Month: 28 d: 33634 (158) Month: 31 d: 33662 (159) Month: 30 d: 33907\r\n",
+      "year 1994:  (160) Month: 31 d: 34180\r\n",
+      "year 1995:  (161) Month: 31 d: 34453\r\n",
+      "year 1996:  (162) Month: 31 d: 34698 (163) Month: 30 d: 34789 (164) Month: 31 d: 34880\r\n",
+      "year 1997:  (165) Month: 30 d: 35307 (166) Month: 31 d: 35398\r\n",
+      "year 1998:  (167) Month: 30 d: 35580\r\n",
+      "year 1999:  (168) Month: 28 d: 35825 (169) Month: 31 d: 35853 (170) Month: 30 d: 36098\r\n",
+      "year 2000:  (171) Month: 31 d: 36280\r\n",
       " \r\n",
       "\r\n",
       " System.out.printf(\"p euler 19 =%d\", n);\r\n",
@@ -6428,15 +6477,15 @@
     "int d=0;\n",
     "int n=0;\n",
     "for(int i=0;i<100;i++) {\n",
-    "    //System.out.printf(\"year %d\\n\",i);\n",
+    "    System.out.printf(\"\\nyear %4d: \",i+1901);\n",
     "    if(((1901+i)%4==0 && (1901+i)%100!=0) || (1901+i)%400 ==0) {\n",
     "        D[1]=29;\n",
     "    } else {\n",
     "        D[1]=28;\n",
     "    }\n",
     "    for(int t:D) {\n",
-    "        if((d-1)%7==0 && i>=1) {\n",
-    "            //System.out.printf(\"\\tMonth:%d d:%d\\n\", t,d);\n",
+    "        if((d+1)%7==0 && i>=0) {\n",
+    "            System.out.printf(\" (%2d) Month:%3d d:%6d\", n,t,d);\n",
     "            n+=1;\n",
     "        }\n",
     "        d+=t;\n",
