--- a/j_6_datastructure.ipynb
+++ b/j_6_datastructure.ipynb
@@ -10,7 +10,7 @@
    "source": [
     "# 6. 데이터구조\n",
     "\n",
-    "Last updated 20180622FRI1800 20180512SUN1600 20180329THR1730\n",
+    "Last updated 20190506MON 20180622FRI1800 20180512SUN1600 20180329THR1730\n",
     "\n",
     "## 6.1 학습내용\n",
     "\n",
@@ -2399,7 +2399,8 @@
    "cell_type": "code",
    "execution_count": 65,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
